<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/tvColor"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:text="@string/_7"
            android:onClick="onDigit"
            android:layout_marginEnd="2dp"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:onClick="onDigit"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Divide"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:textSize="40sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:text="@string/_4"
            android:onClick="onDigit"
            android:layout_marginEnd="2dp"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:onClick="onDigit"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/btnMultip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Multiply"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:textSize="40sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:text="@string/_1"
            android:onClick="onDigit"
            android:layout_marginEnd="2dp"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:onClick="onDigit"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Plus"
            android:textSize="40sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textSize="40sp" />
        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:onClick="onClear"
            android:textAllCaps="false"
            android:text="@string/clear"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Dot"
            android:onClick="onDecimalPoint"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/btnSubstract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Substract"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:textSize="40sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:textSize="40sp"/>
    </LinearLayout>


</LinearLayout>